kubernetes/5.5_lets_encrypt_DNS-01/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: snippet-letsencrypt-dns01-demo
