kubernetes/5.5_lets_encrypt_DNS-01/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: snippet-letsencrypt-dns01-demo
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
